# mcp-server-wezterm

./: Cargo.toml  README.md  deny.toml  flake.nix  justfile  package.json  pyproject.toml  typos.toml
.github/workflows/: check.yml  release.yaml
docs/superpowers/specs/: 2026-03-11-rust-rewrite-design.md  2026-03-14-template-integration-design.md
src/: errors.rs  tools.rs
src/tools/: pane.rs  query.rs  tab.rs  window.rs
tests/: e2e.rs
