[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mcp-server-wezterm-rs"
description = "MCP server for WezTerm terminal"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["mcp", "wezterm", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
bindings = "bin"
strip = true
